export interface GenericCommand<TType extends string> {
  type: TType;
}
